[tool.poetry]
name = "support_bot"
version = "0.1.0"
description = ""
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = {extras = ["dotenv"], version = "^1.10.1"}
python-telegram-bot = "^13.13"
google-cloud-dialogflow = "^2.15.1"
pathvalidate = "^2.5.2"
vk-api = "^11.9.9"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
